# timezone-hermes-fix

./: .gitignore  CONTRIBUTING.md  README.md  TimezoneHermesFix.podspec  lefthook.yml  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: OnLoad.cpp  TimezoneHermesFix.cpp  TimezoneHermesFix.h
android/src/main/java/com/timezonehermesfix/: TimezoneHermesFixModule.kt  TimezoneHermesFixPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/timezonehermesfix/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TimezoneHermesFixExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/TimezoneHermesFixExample.xcodeproj/: project.pbxproj
example/ios/TimezoneHermesFixExample.xcodeproj/xcshareddata/xcschemes/: TimezoneHermesFixExample.xcscheme
example/ios/TimezoneHermesFixExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: TimezoneHermesFix.h  TimezoneHermesFix.mm
scripts/: test-16kb-support.sh
src/: NativeTimezoneHermesFix.ts  index.tsx  useTimezoneHermesFix.ts
